--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-html, body {
-  height: 100%;
-  width: 100%;
+html,
+body {
+	height: 100%;
+	width: 100%;
+	font-family: "Open Sans", sans-serif;
 }
